--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "tailwind": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
+    "dev":"nodemon app.js",
+    "start":"node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Pushkar Kumar Sah",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "chess.js": "^1.0.0-beta.8",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "nodemon": "^3.1.4",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4",
+    "tailwindcss": "^3.4.13"
   }
 }
