--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,16 @@
       "src": "/",
       "dest": "/app.js"
     }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'none'; script-src 'self' https://vercel.live; style-src 'self';"
+        }
+      ]
+    }
   ]
 }
