--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'none'; script-src 'self' https://vercel.live; style-src 'self';"
+          "value": "default-src 'none'; script-src 'self' https://vercel.live https://cdn.vercel.live; style-src 'self'; img-src 'self'; connect-src 'self';"
         }
       ]
     }
