--- a/vercel.json
+++ b/vercel.json
@@ -6,21 +6,10 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/",
-      "destination": "/app.js"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' https://vercel.live https://cdn.vercel.live; style-src 'self'; img-src 'self'; connect-src 'self';"
-        }
-      ]
+      "src": "/",
+      "dest": "/app.js"
     }
   ]
 }
